[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyperclipco"
version = "0.1.3"
description = "Official Python SDK for the Hyperclip API — create, poll, and manage flow runs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Hyperclip" }]
keywords = ["hyperclip", "video", "ai-video", "sdk", "api"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.24",
]

[project.urls]
Homepage = "https://hyperclip.co"
Repository = "https://github.com/hyperclip/hyperclip-sdks"
Issues = "https://github.com/hyperclip/hyperclip-sdks/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hyperclipco"]

[tool.hatch.build.targets.sdist]
include = ["src/hyperclipco", "README.md", "pyproject.toml"]
